--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "psycopg-binary>=3.1.18",
     "alembic>=1.13.1",
     "tenacity>=9.0.0",
+    "pydantic-settings>=2.2.1",
 ]
 
 [project.optional-dependencies]
