--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,20 +20,21 @@ classifiers = [
 ]
 version = "0.1.0"
 dependencies = [
-    "fastapi>=0.110.0",
+    "fastapi>=0.118.2",
     "uvicorn>=0.27.0",
     "typer>=0.9.0",
     "python-dotenv>=1.0.0",
     "loguru>=0.7.0",
-    "strawberry-graphql[fastapi]>=0.262.0",
+    "strawberry-graphql[fastapi]>=0.282.0",
     "jinja2>=3.1.0",
-    "sqlmodel>=0.0.14",
+    "sqlmodel>=0.0.24",
     "sqlalchemy>=2.0.27",
-    "psycopg>=3.1.18",
-    "psycopg-binary>=3.1.18",
+    "psycopg>=3.2.10",
+    "psycopg-binary>=3.2.10",
     "alembic>=1.13.1",
     "tenacity>=9.0.0",
     "pydantic-settings>=2.2.1",
+    "arrow>=1.3.0",
 ]
 
 [project.optional-dependencies]
@@ -59,21 +60,27 @@ api-server = "api_server.main:app"
 [tool.ruff]
 target-version = "py312"
 extend-exclude = ["src/api_server/__version__.py"]
-line-length = 150
-lint.ignore = []
-lint.select = [
+line-length = 130
+
+[tool.ruff.lint]
+ignore = [
+    "B008",  # Function call in argument defaults (false positive for Typer)
+]
+select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
     "F",  # pyflakes
     "I",  # isort
     "B",  # flake8-bugbear
     "C4",  # flake8-comprehensions
+    "C90", # McCabe cyclomatic complexity
     "SIM", # flake8-simplify
     "UP",  # pyupgrade
     "ARG001" # unused arguments in functions
 ]
-# Format files
-unsafe-fixes = true
+
+[tool.ruff.lint.mccabe]
+max-complexity = 10
 
 [tool.ruff.format]
 quote-style = "double"
