--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,16 @@
-# Template API Server Configuration
+# API Server Configuration
+# Copy this file to .env and adjust values as needed
+
+# Server settings
 API_SERVER_HOST=127.0.0.1
 API_SERVER_PORT=8080
 
-# Logging Configuration
+# Logging
 API_SERVER_LOG_LEVEL=DEBUG
 API_SERVER_SQL_LOG=true
 
-# Database Configuration
-# Exemplary database credentials - replace with your actual values
-DB_USERNAME=myuser
-DB_PASSWORD=mypassword123
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_NAME=mydb
+# Database - replace with your actual values
+API_SERVER_DATABASE_URL=postgresql+psycopg://myuser:mypassword@127.0.0.1:5432/mydb
 
-# Construct database URLs using the variables above
-API_SERVER_DATABASE_URL=postgresql+psycopg://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
-API_SERVER_PSQL_URL=postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+# Optional: Server profiles (rest, graphql, or both)
+# API_SERVER_PROFILES=rest,graphql
