feat: Upgrade to Python 3.14, add admin CLI, advisory locks, and modernize codebase
- Upgrade from Python 3.13 to 3.14 (pyproject.toml, Dockerfile, uv.lock)
- Add dual CLI entry points (api-server, api-server-cli) with db check/upgrade
- Add PostgreSQL advisory locks for safe multi-instance migrations
- Add exception handlers mapping ResourceNotFoundError/VersionConflictError to HTTP 404/409
- Add AGENTS.md with coding conventions for AI assistants
- Add architecture docs and CI workflow
- Upgrade strawberry-graphql >=0.291.0 (fixes Pydantic V1 warning on Python 3.14)
- Replace uuid4 with uuid7, datetime.utcnow() with arrow.utcnow().datetime
- Modernize type annotations (remove quoted forward references)
- Suppress verbose third-party loggers (watchfiles)
- Add run:cli task, remove obsolete db:setup task and alembic.sh script

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -60,11 +60,6 @@ tasks:
       - uv pip install --python .venv/bin/python build
       - .venv/bin/python -m build
 
-  db:setup:
-    desc: Setup the database and run all migrations
-    cmds:
-      - .venv/bin/alembic upgrade head
-
   db:migrate:
     desc: Generate a new migration
     cmds:
@@ -83,13 +78,19 @@ tasks:
   db:reset:
     desc: Reset the database (WARNING - This will delete all data)
     cmds:
-      - task: db:setup
+      - task: db:upgrade
 
   run:
     desc: Run the application
     dotenv: ['.env']
     cmds:
       - .venv/bin/python -m {{.MODULE_NAME}} {{.CLI_ARGS}}
+
+  run:cli:
+    desc: Run the admin CLI (e.g. task run:cli -- db check)
+    dotenv: ['.env']
+    cmds:
+      - .venv/bin/python -m api_server.cli {{.CLI_ARGS}}
 
   fct:
     desc: Format, check, test
