chore: remove unused templates/index.html (superseded by home/index.html)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ watch = [
 where = ["src"]
 
 [tool.setuptools.package-data]
-api_server = ["home/*.html", "templates/*.html"]
+api_server = ["home/*.html"]
 
 [project.scripts]
 api-server = "api_server.main:app"
